--- a/deploy/vote/deploy.yaml
+++ b/deploy/vote/deploy.yaml
@@ -18,6 +18,6 @@ spec:
         tier: front
     spec:
       containers:
-      - image: schoolofdevops/vote:v1
+      - image: schoolofdevops/vote:jasdfj
         name: vote
         resources: {}
