--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -5,3 +5,23 @@ resources:
 patches:
   - path: deploy.yaml
   - path: svc.yaml
+
+replicas:
+- name: vote
+  count: 7
+
+images:
+- name: schoolofdevops/vote
+  newTag: v4
+  # newName: lfs267/vote
+  # digest: sha256:24a0c4b4a4c0eb97a1aabb8e29f18e917d05abfe1b7a7c07857230879ce7d3d3  # it overrides tag
+
+namespace: instavote
+
+labels:
+  - pairs:
+      project: instavote
+      env: staging
+
+commonAnnotations:
+  supported-by: "sre@example.com"
