--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -25,3 +25,8 @@ labels:
 
 commonAnnotations:
   supported-by: "sre@example.com"
+
+configMapGenerator:
+- name: vote-options
+  envs:
+  - options.env
