--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -11,7 +11,7 @@ replicas:
 images:
   - name: schoolofdevops/vote
     newTag: main-a1895a79-1765986177 # {"$imagepolicy": "flux-system:vote:tag"}
-    # newName: lfs267/vote
+    newName: jcampos15/vote
     # digest: sha256:24a0c4b4a4c0eb97a1aabb8e29f18e917d05abfe1b7a7c07857230879ce7d3d3  # it overrides tag
 namespace: instavote
 labels:
